[project]
name = "excel-input-driver-analyze"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "click",
 "openpyxl",
 "pandas",
 "xlrd>=2.0.1",
]

[project.scripts]
excel-input-driver-analyze = "main:cli"

[tool.setuptools]
py-modules = ["main", "find_input_drivers"]
